# hexagonulator

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  python-publish.yml
hexgonulator/common/: bits_ops.py
hexgonulator/memory/: abstract.py  controller.py  hub.py  ram.py
hexgonulator/v67/: processor.py  registers.py  sequencer.py  xunits.py
tests/: test_bits_ops.py
tests/blackbox/: test_basic_usage.py
tests/test_opcodes/: common.py  conftest.py  test_add_to_pc.py  test_call.py  test_callr.py  test_cmp_eq_and_jump_p0_imm.py  test_cmp_eq_and_jump_p0_imm_hint.py  test_cmp_eq_and_jump_p0_imm_not.py  test_cmp_eq_and_jump_p0_imm_not_hint.py  test_cmp_eq_and_jump_p0_minus1.py  test_cmp_eq_and_jump_p0_minus1_hint.py  test_cmp_eq_and_jump_p0_minus1_not.py  test_cmp_eq_and_jump_p0_minus1_not_hint.py  test_cmp_eq_and_jump_p0_reg.py  test_cmp_eq_and_jump_p0_reg_hint.py  test_cmp_eq_and_jump_p0_reg_not.py  test_cmp_eq_and_jump_p0_reg_not_hint.py  test_cmp_eq_and_jump_p1_imm.py  test_cmp_eq_and_jump_p1_imm_hint.py  test_cmp_eq_and_jump_p1_imm_not.py  test_cmp_eq_and_jump_p1_imm_not_hint.py  test_cmp_eq_and_jump_p1_minus1.py  test_cmp_eq_and_jump_p1_minus1_hint.py  test_cmp_eq_and_jump_p1_minus1_not.py  test_cmp_eq_and_jump_p1_minus1_not_hint.py  test_cmp_eq_and_jump_p1_reg.py  test_cmp_eq_and_jump_p1_reg_hint.py  test_cmp_eq_and_jump_p1_reg_not.py  test_cmp_eq_and_jump_p1_reg_not_hint.py  test_cmp_eq_new_jump_imm.py  test_cmp_eq_new_jump_imm_hint.py  test_cmp_eq_new_jump_imm_not.py  test_cmp_eq_new_jump_imm_not_hint.py  test_cmp_eq_new_jump_minus1.py  (+533 more)
(+818 files in other folders)
